force-app/main/default/objects/Feature_Flag__c/fields/ActivationDateTime__c.field-meta.xml
<CustomField>
    <fullName>ActivationDateTime__c</fullName>
    <description>The date and time that the feature will activate upon.</description>
    <inlineHelpText>The date and time that the feature will activate upon.</inlineHelpText>
    <label>Activation Date Time</label>
    <type>DateTime</type>
</CustomField>