force-app/main/default/objects/Feature_Flag__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this checkbox is checked the feature will be active.</description>
    <inlineHelpText>When this checkbox is checked the feature will be active.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>