force-app/main/default/objects/Feature_Flag__c/fields/DeactivationDateTime__c.field-meta.xml
<CustomField>
    <fullName>DeactivationDateTime__c</fullName>
    <description>The date and time that the feature will deactivate upon.</description>
    <inlineHelpText>The date and time that the feature will deactivate upon.</inlineHelpText>
    <label>Deactivation Date Time</label>
    <type>DateTime</type>
</CustomField>