force-app/main/default/objects/Feature_Flag__c/fields/Expire_Date__c.field-meta.xml
<CustomField>
    <fullName>Expire_Date__c</fullName>
    <inlineHelpText>The date and time that the feature will expire. This will NOT disable the
        feature. It will cause tests to fail after this date.</inlineHelpText>
    <label>Test Failure Date</label>
    <type>DateTime</type>
</CustomField>