force-app/main/default/objects/Feature_Flag__c/validationRules/Expire_Date_Within_Timeframe.validationRule-meta.xml
<ValidationRule>
    <fullName>Expire_Date_Within_Timeframe</fullName>
    <active>true</active>
    <errorConditionFormula>Expire_Date__c &gt; NOW()+45</errorConditionFormula>
    <errorDisplayField>Expire_Date__c</errorDisplayField>
    <errorMessage>Expire date must be within 45 days.</errorMessage>
</ValidationRule>