force-app/main/default/objects/Feature_Flag__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>ActivationDateTime__c</columns>
    <columns>DeactivationDateTime__c</columns>
    <columns>Expire_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>